--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"export": "next build && next export"
+		"export": "next build && next export",
+		"serve": "cd out && serve -p 8080"
 	},
 	"keywords": [],
 	"author": "",
